# dealsnoop

./: .gitignore  Dockerfile  Procfile  cache.txt  docker-compose.yml  fb_response.html  nixpacks.toml  pyproject.toml  searches.pkl  test.py
.cursor/rules/: dealsnoop-usage.mdc
scripts/: debug_listings.py
src/: bot.py  listing_cache.py  main.py  pickler.py  search_config.py  site_check.py
src/dealsnoop/: bot.py  config.py  exceptions.py  listing_cache.py  listing_log.py  logger.py  main.py  maps.py  pickler.py  product.py  search_config.py  snoop.py  store.py  user_location.py
src/dealsnoop/bot/: client.py  commands.py  embeds.py  views.py
src/dealsnoop/engines/: __init__.py  base.py  facebook_marketplace.py
src/fbmn/: bot.py  listing_cache.py  logger.py  logging.py  main.py  maps.py  pickler.py  search_config.py  site_check.py
src/fbmn/engines/: facebook_marketplace.py
